--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,14 @@
 <div class="card bg-light mb-3" style="max-width: 18rem;">
     <div class="card-header">Signup</div>
     <div class="card-body">
-        <form>
+        <form class="signup-form">
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="username" class="form-control" id="exampleInputEmail1" placeholder="Enter username">
+                <label for="signup-username">Username</label>
+                <input type="username" class="form-control" id="signup-username" placeholder="Enter username">
 
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label for="signup-password">Password</label>
+                    <input type="password" class="form-control" id="signup-password" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -19,13 +19,13 @@
 <div class="card bg-light mb-3" style="max-width: 18rem;">
     <div class="card-header">Login</div>
     <div class="card-body">
-        <form>
+        <form class="login-form">
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="login-username">Username</label>
                 <input type="username" class="form-control" id="exampleInputEmail1" placeholder="Enter username">
 
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
+                    <label for="login-password">Password</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
@@ -33,4 +33,4 @@
     </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="/js/login.js"></script>
