blogpost route working

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,14 +3,17 @@
     <div class="card-body">
         <form class="signup-form">
             <div class="form-group">
-                <label for="signup-username">Username</label>
-                <input type="username" class="form-control" id="signup-username" placeholder="Enter username">
-
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
                 <div class="form-group">
-                    <label for="signup-password">Password</label>
-                    <input type="password" class="form-control" id="signup-password" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                    <label for="signup-username">Username</label>
+                    <input type="username" class="form-control" id="signup-username" placeholder="Username">
+
+                    <div class="form-group">
+                        <label for="signup-password">Password</label>
+                        <input type="password" class="form-control" id="signup-password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
@@ -22,11 +25,11 @@
         <form class="login-form">
             <div class="form-group">
                 <label for="login-username">Username</label>
-                <input type="username" class="form-control" id="exampleInputEmail1" placeholder="Enter username">
+                <input type="username" class="form-control" id="login-username" placeholder="Enter username">
 
                 <div class="form-group">
                     <label for="login-password">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control" id="login-password" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
         </form>
