added blogposts to homepage from seeds

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,8 @@
     </ul>
   </div>
 </nav>
-{{{body}}}
+<main class>{{{body}}}</main>
+
 {{#if loggedIn}}
 <script src="./js/logout.js"></script>
 {{/if}}
