--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,24 +1,14 @@
-<!-- Loop over each object in the blogposts array -->
-{{#each blogpost as |blogpost| }}
-<div class="row mb-4 blogpost">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/blogpost/{{blogpost.id}}">{{blogpost.name}}</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount blogpost.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{blogpost.user.name}} on {{format_date blogpost.date_created}}</p>
+{{#each blogposts as |blogpost|}}
+<div class="card text-center">
+  <div class="card-header">
+    {{title}}
   </div>
-  <div class="col-md-7">
-    <p>
-      {{blogpost.description}}
-    </p>
+  <div class="card-body">
+    <p class="card-text">{{contents}}</p>
+  </div>
+  <div class="card-footer text-muted">
+    {{date_created}}
+    {{username}}
   </div>
 </div>
 {{/each}}
