changes styling on login/signup cards to be side by side

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
 {{#each blogposts as |blogpost|}}
 <div class="card text-center">
-  <div class="card-header">
+  <div class="card-header bg-secondary font-weight-bold">
     {{title}}
   </div>
   <div class="card-body">
     <p class="card-text">{{contents}}</p>
   </div>
-  <div class="card-footer text-muted">
+  <div class="card-footer text-muted bg-light">
     {{date_created}}
     {{username}}
   </div>
