--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,39 +1,47 @@
-<div class="card bg-light mb-3" style="max-width: 18rem;">
-    <div class="card-header">Signup</div>
-    <div class="card-body">
-        <form class="signup-form">
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card bg-light mb-3" style="max-width: 18rem;">
+                <div class="card-header">Signup</div>
+                <div class="card-body">
+                    <form class="signup-form">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter email">
+                            <div class="form-group">
+                                <label for="signup-username">Username</label>
+                                <input type="username" class="form-control" id="signup-username" placeholder="Username">
+
+                                <div class="form-group">
+                                    <label for="signup-password">Password</label>
+                                    <input type="password" class="form-control" id="signup-password"
+                                        placeholder="Password">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="col">
+    <div class="card bg-light mb-3" style="max-width: 18rem;">
+        <div class="card-header">Login</div>
+        <div class="card-body">
+            <form class="login-form">
                 <div class="form-group">
-                    <label for="signup-username">Username</label>
-                    <input type="username" class="form-control" id="signup-username" placeholder="Username">
+                    <label for="login-username">Username</label>
+                    <input type="username" class="form-control" id="login-username" placeholder="Enter username">
 
                     <div class="form-group">
-                        <label for="signup-password">Password</label>
-                        <input type="password" class="form-control" id="signup-password" placeholder="Password">
+                        <label for="login-password">Password</label>
+                        <input type="password" class="form-control" id="login-password" placeholder="Password">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
-
-
-<div class="card bg-light mb-3" style="max-width: 18rem;">
-    <div class="card-header">Login</div>
-    <div class="card-body">
-        <form class="login-form">
-            <div class="form-group">
-                <label for="login-username">Username</label>
-                <input type="username" class="form-control" id="login-username" placeholder="Enter username">
-
-                <div class="form-group">
-                    <label for="login-password">Password</label>
-                    <input type="password" class="form-control" id="login-password" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
 </div>
-
+</div>
 <script src="/js/login.js"></script>
