--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -14,8 +14,8 @@
         <input class="form-input" type="text" id="blogpost-name" name="blogpost-name" />
       </div>
       <div class="form-group">
-        <label for="blogpost-desc">description:</label>
-        <textarea class="form-input" id="blogpost-desc" name="blogpost-desc"></textarea>
+        <label for="blogpost-content">description:</label>
+        <textarea class="form-input" id="blogpost-content" name="blogpost-content"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
