--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
   </div>
   <div class="card-footer text-muted bg-light">
     {{date_created}}
-    {{username}}
+    {{user.username}}
   </div>
 </div>
 {{/each}}
