fixed typo in blogpost.js not allowing new posts to display contents

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{#each blogposts as |blogpost|}}
 <div class="card text-center">
   <div class="card-header bg-secondary font-weight-bold">
-    {{title}}
+    <h4><a href="/blogpost/{{id}}">{{title}}</a></h4>
   </div>
   <div class="card-body">
     <p class="card-text">{{contents}}</p>
