--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
+    <h2>Welcome, {{username}}!</h2>
   </div>
 </div>
 
@@ -10,11 +10,11 @@
 
     <form class="form new-blogpost-form">
       <div class="form-group">
-        <label for="blogpost-name">blogpost name:</label>
-        <input class="form-input" type="text" id="blogpost-name" name="blogpost-name" />
+        <label for="blogpost-title">Blogpost title:</label>
+        <input class="form-input" type="text" id="blogpost-title" name="blogpost-title" />
       </div>
       <div class="form-group">
-        <label for="blogpost-content">description:</label>
+        <label for="blogpost-content">Description:</label>
         <textarea class="form-input" id="blogpost-content" name="blogpost-content"></textarea>
       </div>
       <div class="form-group">
@@ -27,10 +27,10 @@
   <div class="col-md-6 blogpost-list">
     <h3>Current Blogposts:</h3>
 
-    {{#each blogpost as |blogpost|}}
+    {{#each Blogposts as |blogpost|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.name}}</a></h4>
+        <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.content}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{blogpost.id}}">DELETE</button>
