--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/blogpost">Dashboard</a>
+        <a class="nav-link" href="/dashboard">Dashboard</a>
       </li>
       <li class="nav-item">
         {{#if loggedIn}}
@@ -37,7 +37,9 @@
 <main class>{{{body}}}</main>
 
 {{#if loggedIn}}
+<script src="./js/dashboard.js"></script>
 <script src="./js/logout.js"></script>
+
 {{/if}}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
