blogposts not showing up on dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -30,10 +30,10 @@
     {{#each Blogposts as |blogpost|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4>{{blogpost.content}}</h4>
+        <h4>{{content}}</h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{blogpost.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" data-id="{id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
@@ -41,4 +41,4 @@
   {{/if}}
 </div>
 
-<script src="./js/blogpost.js"></script>
+<script src="./js/dashboard.js"></script>
