--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,4 +1,3 @@
-{{#each blogposts as |blogpost|}}
 <div class="card text-center">
   <div class="card-header bg-secondary font-weight-bold">
     <h4>{{title}}</h4>
@@ -8,7 +7,6 @@
   </div>
   <div class="card-footer text-muted bg-light">
      
-    Posted by: {{user.username}} on {{format_date blogpost.date_created}}
+    Posted by: {{user.username}} on {{format_date date_created}}
   </div>
 </div>
-{{/each}}
