added comment model

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 {{#each blogposts as |blogpost|}}
-<div class="card text-center">
+<div class="card text-center mt-5 mb-5">
   <div class="card-header bg-secondary font-weight-bold">
     <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.title}}</a></h4>
   </div>
