--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,4 +1,4 @@
-<div class="card text-center">
+<div class="card text-center m-3">
   <div class="card-header bg-secondary font-weight-bold">
     <h4>{{title}}</h4>
   </div>
@@ -9,4 +9,14 @@
      
     Posted by: {{user.username}} on {{format_date date_created}}
   </div>
+</div>
+<div class="card text-center m-3">
+  <div class="card-header bg-secondary font-weight-bold">
+    <h4>Add a comment</h4>
+  </div>
+  <div class="mb-3">
+  <label for="comment" class="form-label"></label>
+  <textarea class="form-control" id="comment" rows="3"></textarea>
+  <button type="button" class="btn btn-primary">Submit</button>
+</div>
 </div>
