--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,28 +1,3 @@
-<div class="row">
-  <div class="col-auto">
-    <h2>Welcome, {{user.username}}!</h2>
-  </div>
-</div>
-
-<div class="row mt-4">
-  <div class="col-md-6">
-    <h3>Create a New Blogpost:</h3>
-
-    <form class="form new-blogpost-form">
-      <div class="form-group">
-        <label for="blogpost-title">Blogpost title:</label>
-        <input class="form-input" type="text" id="blogpost-title" name="blogpost-title" />
-      </div>
-      <div class="form-group">
-        <label for="blogpost-content">Description:</label>
-        <textarea class="form-input" id="blogpost-content" name="blogpost-content"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
-  </div>
-
   {{#if blogposts.length}}
   <div class="col-md-6 blogpost-list">
     <h3>Current Blogposts:</h3>
@@ -42,6 +17,32 @@
     {{/each}}
   </div>
   {{/if}}
+</div>
+
+<div class="row">
+  <div class="col-auto">
+    <h2 class="m-3">Welcome, {{user.username}}!</h2>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-header">
+    <h3>Create a New Blogpost:</h3>
+</div>
+<div class="card-body">
+    <form class="form new-blogpost-form">
+      <div class="form-group">
+        <label for="blogpost-title">Blogpost title:</label>
+        <input class="form-input" type="text" id="blogpost-title" name="blogpost-title" />
+      </div>
+      <div class="form-group">
+       <label for="description" class="form-label">Description</label>
+  <textarea class="form-control" id="blogpost-contents" rows="3"></textarea>
+      <div class="form-group m-3">
+        <button type="submit" class="btn btn-primary">Create</button>
+      </div>
+    </form>
+  </div>
 </div>
 
 <script src="./js/dashboard.js"></script>
