--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Tech Blog</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <a class="navbar-brand font-weight-bold" href="/"><h1>Tech Blog</h1></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
