--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,8 +1,8 @@
-  {{#if blogposts.length}}
+  {{#if blogpost.length}}
   <div class="col-md-6 blogpost-list">
     <h3>Current Blogposts:</h3>
 
-    {{#each blogposts as |blogpost|}}
+    {{#each blogpost as |blogpost|}}
     <div class="row mb-2">
       <div class="col-md-8">
         <h4>{{blogpost.content}}</h4>
