--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-{{#each blogposts as |blogpost|}}
+{{#each blogpost as |blogpost|}}
 <div class="card text-center mt-5 mb-5">
   <div class="card-header bg-secondary font-weight-bold">
     <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.title}}</a></h4>
