--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -10,13 +10,29 @@
     Posted by: {{user.username}} on {{format_date date_created}}
   </div>
 </div>
+
+{{!-- <div class="card text-center m-3">
+  <div class="card-header bg-secondary font-weight-bold">
+    <h4>Comments</h4>
+  </div>
+  
+  <div class="card-body">
+    <p class="card-text">{{comment.comment}}</p>
+  </div>
+  <div class="card-footer text-muted bg-light">
+     
+    Posted by: {{user.username}} on {{format_date comment.date_created}}
+  </div>
+</div>
 <div class="card text-center m-3">
   <div class="card-header bg-secondary font-weight-bold">
     <h4>Add a comment</h4>
   </div>
   <div class="mb-3">
+    <form class="form new-comment">
   <label for="comment" class="form-label"></label>
   <textarea class="form-control" id="comment" rows="3"></textarea>
   <button type="button" class="btn btn-primary">Submit</button>
+</form>
 </div>
-</div>
+</div>  --}}
