--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-{{!-- <div class="card text-center m-3">
+<div class="card text-center m-3">
   <div class="card-header bg-secondary font-weight-bold">
     <h4>Comments</h4>
   </div>
@@ -35,4 +35,4 @@
   <button type="button" class="btn btn-primary">Submit</button>
 </form>
 </div>
-</div>  --}}
+</div> 
