added comment card

--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -16,14 +16,14 @@
     <h4>Comments</h4>
   </div>
   
-  <div class="card-body">
+  {{!-- <div class="card-body">
     <p class="card-text">{{comment.comment}}</p>
   </div>
   <div class="card-footer text-muted bg-light">
      
     Posted by: {{user.username}} on {{format_date comment.date_created}}
   </div>
-</div>
+</div> --}}
 <div class="card text-center m-3">
   <div class="card-header bg-secondary font-weight-bold">
     <h4>Add a comment</h4>
