--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,32 +1,21 @@
-  {{#if blogpost.length}}
-  <div class="col-md-6 blogpost-list">
-    <h3>Current Blogposts:</h3>
-
-    {{#each blogpost as |blogpost|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4>{{blogpost.content}}</h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{blogpost.id}}">DELETE</button>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-warning" data-id="{{blogpost.id}}">UPDATE</button>
-      </div>
-    </div>
-    {{/each}}
+<h2 class="m-2 p-2 text-center">Your blogposts:</h2>
+{{#each myBlogposts as |blogpost|}}
+<div class="card text-center mt-5 mb-5">
+  <div class="card-header bg-secondary font-weight-bold">
+    <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.title}}</a></h4>
   </div>
-  {{/if}}
-</div>
-
-<div class="row">
-  <div class="col-auto">
-    <h2 class="m-3">Welcome, {{user.username}}!</h2>
+  <div class="card-body">
+    <p class="card-text">{{blogpost.contents}}</p>
+  </div>
+  <div class="card-footer text-muted bg-light">
+     Posted on {{format_date blogpost.date_created}}
   </div>
 </div>
-
-<div class="card">
-  <div class="card-header">
+{{/each}}
+ 
+  
+<div class="card text-center">
+  <div class="card-header ">
     <h3>Create a New Blogpost:</h3>
 </div>
 <div class="card-body">
