--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,4 @@
+{{#if myBlogposts.length}}
 <h2 class="m-2 p-2 text-center">Your blogposts:</h2>
 {{#each myBlogposts as |blogpost|}}
 <div class="card text-center mt-5 mb-5">
@@ -12,6 +13,7 @@
   </div>
 </div>
 {{/each}}
+{{/if}}
  
   
 <div class="card text-center">
