--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
       </li>
       <li class="nav-item">
         {{#if loggedIn}}
-        <a class="nav-link" href="/logout" id="logout">Logout</a>
+        <a class="nav-link" href="/login" id="logout">Logout</a>
         {{else}}
         <a class="nav-link" href="/login" id="login">Login</a>
         {{/if}}
