--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,9 +1,3 @@
-{{#each myBlogposts as |blogpost|}}
-<h1 class="m-2 p2 text-center">
-  <p class="user-id" id="{{blogpost.user_id}}">Welcome, {{user.username}}</h1></p>
-<h2 class="m-2 p-2 text-center">Your blogposts:</h2>
-
-
 <div class="card text-center mt-5 mb-5 blogpost-list">
   <div class="card-header bg-secondary font-weight-bold">
     <h4><a href="/blogpost/{{blogpost.id}}">{{blogpost.title}}</a></h4>
@@ -14,27 +8,21 @@
   <div class="card-footer text-muted bg-light">
     Posted on {{format_date blogpost.date_created}}
     <button type="button" class="btn btn-danger" data-id="{{blogpost.id}}" id="deleteBtn">Delete</button>
-   <a href="/update/{{blogpost.user_id}}"><button type="button" class="btn btn-warning" id="updateBtn">Update</button></a>
+    <button type="button" class="btn btn-warning" data-id={{blogpost.id}} id="updateBtn">Update</button>
   </div>
 </div>
-{{/each}}
 
-
-<div class="card text-center">
-  <div class="card-header ">
-    <h3>Create a New Blogpost:</h3>
-  </div>
-  <div class="card-body">
-    <form class="form new-blogpost-form">
+<div class="card-body">
+    <form class="form update-blogpost-form">
       <div class="form-group">
         <label for="blogpost-title">Blogpost title:</label>
-        <input class="form-input" type="text" id="blogpost-title" name="blogpost-title" placeholder="{{blogpost.title}}"/>
+        <input class="form-input" type="text" id="blogpost-title" name="blogpost-title" />
       </div>
       <div class="form-group">
         <label for="description" class="form-label">Description</label>
-        <textarea class="form-control" id="blogpost-contents" rows="3" >{{blogpost.contents}}</textarea>
+        <textarea class="form-control" id="blogpost-contents" rows="3"></textarea>
         <div class="form-group m-3">
-          <button type="submit" class="btn btn-primary">Create</button>
+          <button type="submit" class="btn btn-primary">Update</button>
         </div>
     </form>
   </div>
