--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,12 @@
+{{#if myBlogposts.length}}
+  <h1 class="m-2 p2 text-center">Welcome back!</h1>
+  <h2 class="m-2 p-2 text-center">Your blogposts:</h2>
+  {{else}}
+  <h1 class="m-2 p2 text-center">Welcome!</h1>
+<h2 class="m-2 p-2 text-center">Create your first blogpost!</h2>
+{{/if}}
+<div class="blogposts-list"></div>
 {{#each myBlogposts as |blogpost|}}
-<h1 class="m-2 p2 text-center">
-  <p class="user-id" id="{{blogpost.user_id}}">Welcome, {{user.username}}</h1></p>
-<h2 class="m-2 p-2 text-center">Your blogposts:</h2>
 
 
 <div class="card text-center mt-5 mb-5 blogpost-list">
@@ -13,10 +18,31 @@
   </div>
   <div class="card-footer text-muted bg-light">
     Posted on {{format_date blogpost.date_created}}
-    <button type="button" class="btn btn-danger" data-id="{{blogpost.id}}" id="deleteBtn">Delete</button>
-   <a href="/update/{{blogpost.user_id}}"><button type="button" class="btn btn-warning" id="updateBtn">Update</button></a>
+    <button type="button" class="btn btn-danger" data-id="{{blogpost.id}}" id="deleteBtn">DELETE</button>
+<button type="button" id="updateForm" class= "btn btn-warning"  >UPDATE</button>
+  </div>
+<div class="card text-center" id="update-form">
+  <div class="card-header ">
+    <h3>Update Blogpost:</h3>
+  </div>
+  <div class="card-body">
+    <form class="form new-blogpost-form">
+      <div class="form-group">
+        <label for="blogpost-title">Blogpost title:</label>
+        <input class="form-input" type="text" id="update-title-{{id}}" name="blogpost-title" placeholder="{{blogpost.title}}"/>
+      </div>
+      <div class="form-group">
+        <label for="description" class="form-label">Description</label>
+        <textarea class="form-control" id="update-contents-{{id}}" rows="3" >{{blogpost.contents}}</textarea>
+        <div class="form-group m-3">
+          <button type="submit" id="updateBtn" data-id="{{blogpost.id}}" class="btn btn-primary">Submit Update</button>
+        </div>
+    </form>
   </div>
 </div>
+</div>
+
+
 {{/each}}
 
 
@@ -40,4 +66,4 @@
   </div>
 </div>
 
-<script src="./js/dashboard.js"></script>
+<script src="/js/dashboard.js"></script>
