--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
   </div>
   <div class="card-footer text-muted bg-light">
      
-    Posted by: {{user.username}} on {{format_date blogpost.date_created}}
+    Posted on {{format_date blogpost.date_created}} by {{user.username}}
   </div>
 </div>
 {{/each}}
