--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -11,22 +11,27 @@
   </div>
 </div>
 
-{{!-- 
+
+
+
 <div class="card text-center m-3">
-  <div class="card-header bg-secondary font-weight-bold">
+ <div class="card-header bg-secondary font-weight-bold">
     <h4>Comments</h4>
   </div>
-  <div class="card-body">
-    <p class="card-text">{{comment.text}}</p>
-  </div>
-  <div class="card-footer text-muted bg-light">
-     
-    Posted by: {{user.username}} on {{comment.date_created}}
-  </div>
-</div> --}}
 {{#each comments}}
-<div>{{text}}</div>
+<div class="card text-center m-3"></div>
+  <div class="card-body text-center">
+    <p class="card-text">{{text}}</p>
+  </div>
+  <div class="card-footer text-muted bg-light text-center">
+     
+    Posted by: {{user.username}} on {{format_date date_created}}
+  </div>
+</div>
+</div>
 {{/each}}
+
+
 <div class="card text-center m-3">
   <div class="card-header bg-secondary font-weight-bold">
     <h4>Add a comment</h4>
