--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -18,7 +18,7 @@
   </div>
   <div class="card-footer text-muted bg-light">
     Posted on {{format_date blogpost.date_created}}
-    <button type="button" class="btn btn-danger" data-id="{{blogpost.id}}" id="deleteBtn">DELETE</button>
+    <button type="button" class="btn btn-danger" delete-id="{{blogpost.id}}" id="deleteBtn">DELETE</button>
 <button type="button" id="updateForm" class= "btn btn-warning"  >UPDATE</button>
   </div>
 <div class="card text-center" id="update-form">
