--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,7 +19,7 @@
   <div class="card-footer text-muted bg-light">
     Posted on {{format_date blogpost.date_created}}
     <button type="button" class="btn btn-danger" delete-id="{{blogpost.id}}" id="deleteBtn">DELETE</button>
-<button type="button" id="updateForm" class= "btn btn-warning"  >UPDATE</button>
+<button type="button" id="updateForm" update-id="{{blogpost.id}}" class= "btn btn-warning"  >UPDATE</button>
   </div>
 <div class="card text-center" id="update-form">
   <div class="card-header ">
@@ -29,13 +29,13 @@
     <form class="form new-blogpost-form">
       <div class="form-group">
         <label for="blogpost-title">Blogpost title:</label>
-        <input class="form-input" type="text" id="update-title" blog-id="{{id}}" name="blogpost-title" placeholder="{{blogpost.title}}"/>
+        <textarea class="form-input" type="text" id="update-title" blog-id="{{id}}" name="blogpost-title" placeholder="{{blogpost.title}}" rows="1">{{blogpost.title}}</textarea> 
       </div>
       <div class="form-group">
         <label for="description" class="form-label">Description</label>
         <textarea class="form-control" id="update-contents" blog-id="{{id}} "rows="3">{{blogpost.contents}}</textarea>
         <div class="form-group m-3">
-          <button type="submit" id="updateBtn" data-id="{{blogpost.id}}" class="btn btn-primary">UPDATE</button>
+          <button type="submit" id="updateBtn" update-id="{{blogpost.id}}" class="btn btn-primary">UPDATE</button>
         </div>
     </form>
   </div>
@@ -60,7 +60,7 @@
         <label for="description" class="form-label">Description</label>
         <textarea class="form-control" id="blogpost-contents" rows="3" >{{blogpost.contents}}</textarea>
         <div class="form-group m-3">
-          <button type="submit" class="btn btn-primary">Create</button>
+          <button type="submit" class="btn btn-primary" id="new-blogpost-btn">Create</button>
         </div>
     </form>
   </div>
