--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -337,9 +337,9 @@ template {
   display: none;
 }
 
-#update-form {
+/* .hidden-form {
   display: none;
-}
+} */
 
 #update-comment {
   display: none;
