--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,19 +21,20 @@
     <button type="button" class="btn btn-danger" delete-id="{{blogpost.id}}" id="deleteBtn">DELETE</button>
 <button type="button" id="updateForm" update-id="{{blogpost.id}}" class= "btn btn-warning"  >UPDATE</button>
   </div>
-<div class="card text-center" id="update-form">
+
+<div class="d-none card text-center" id="update-form-{{id}}">
   <div class="card-header ">
     <h3>Update Blogpost:</h3>
   </div>
   <div class="card-body">
-    <form class="form new-blogpost-form">
+    <form class="form">
       <div class="form-group">
         <label for="blogpost-title">Blogpost title:</label>
-        <textarea class="form-input" type="text" id="update-title" blog-id="{{id}}" name="blogpost-title" placeholder="{{blogpost.title}}" rows="1">{{blogpost.title}}</textarea> 
+        <textarea class="form-input" type="text" id="update-title-{{id}}" blog-id="{{id}}" name="blogpost-title" placeholder="{{blogpost.title}}" rows="1">{{blogpost.title}}</textarea> 
       </div>
       <div class="form-group">
         <label for="description" class="form-label">Description</label>
-        <textarea class="form-control" id="update-contents" blog-id="{{id}} "rows="3">{{blogpost.contents}}</textarea>
+        <textarea class="form-control" id="update-contents-{{id}}" blog-id="{{id}} "rows="3">{{blogpost.contents}}</textarea>
         <div class="form-group m-3">
           <button type="submit" id="updateBtn" update-id="{{blogpost.id}}" class="btn btn-primary">UPDATE</button>
         </div>
