--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <div class="card bg-light mb-3" style="max-width: 18rem;">
+            <div class="card bg-light mb-3 mt-5" style="max-width: 18rem;">
                 <div class="card-header">Signup</div>
                 <div class="card-body">
                     <form class="signup-form">
@@ -25,7 +25,7 @@
     </div>
 </div>
 <div class="col">
-    <div class="card bg-light mb-3" style="max-width: 18rem;">
+    <div class="card bg-light mb-3 mt-5" style="max-width: 18rem;">
         <div class="card-header">Login</div>
         <div class="card-body">
             <form class="login-form">
